--- a/src/app/shared/components/language-switcher/language-switcher.component.html
+++ b/src/app/shared/components/language-switcher/language-switcher.component.html
@@ -10,6 +10,7 @@
           class="language-switcher__icon-trigger"
           [ariaLabel]="changeLanguageTooltip"
           [ebTooltip]="changeLanguageTooltip"
+          [tooltipSetAriaLabel]="false"
           [ariaExpanded]="isOpen()"
           ariaHasPopup="listbox"
           [ariaControls]="isOpen() ? 'language-listbox' : undefined"
