feat(login): change logout to user icon with menu

--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -35,18 +35,9 @@
 
         <!-- Auth Actions -->
         @if (isAuthenticated()) {
-          <div class="header__user">
-            <span class="header__user-name">{{ displayName() }}</span>
-            <eb-button
-              variant="ghost"
-              size="sm"
-              [ariaLabel]="t('header.ariaLabels.logout')"
-              (click)="onLogout()"
-              [disabled]="isLoading()"
-            >
-              {{ t('header.logout') }}
-            </eb-button>
-          </div>
+          @if (user(); as currentUser) {
+            <eb-user-menu [user]="currentUser" (logout)="onLogout()" />
+          }
         } @else {
           <eb-button
             variant="primary"
