--- a/src/app/shared/components/button/button-content/button-content.component.scss
+++ b/src/app/shared/components/button/button-content/button-content.component.scss
@@ -16,7 +16,9 @@
 }
 
 .btn__content {
-  gap: var(--space-1);
+  display: inline-flex;
+  align-items: center;
+  gap: var(--space-2);
 }
 
 .btn__icon,
